--- a/config/database.yml
+++ b/config/database.yml
@@ -1,26 +1,12 @@
-# PostgreSQL. Versions 8.2 and up are supported.
-#
-# Install the pg driver:
-#   gem install pg
-# On OS X with Homebrew:
-#   gem install pg -- --with-pg-config=/usr/local/bin/pg_config
-# On OS X with MacPorts:
-#   gem install pg -- --with-pg-config=/opt/local/lib/postgresql84/bin/pg_config
-# On Windows:
-#   gem install pg
-#       Choose the win32 build.
-#       Install PostgreSQL and put its /bin directory on your path.
-#
-# Configure Using Gemfile
-# gem 'pg'
-#
 development:
-  adapter: postgresql
-  encoding: unicode
+  adapter: mysql2
   database: examwriter_development
-  pool: 5
-  username: postgres
+  username: root
+  host: localhost
   password:
+  socket: /private/tmp/mysql.sock
+  pool: 5
+  collation: utf8_unicode_ci
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -44,17 +30,17 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
-  encoding: unicode
+  adapter: mysql2
+  collation: utf8_unicode_ci
   database: examwriter_test
   pool: 5
-  username: postgres
+  username: root
   password:
 
 production:
-  adapter: postgresql
-  encoding: unicode
+  adapter: mysql2
+  collation: utf8_unicode_ci
   database: examwriter_production
   pool: 5
-  username: postgres
+  username: root
   password:
